// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Heading /> > defaults to the correct HTML element > renders the correct element for <Heading variant={display-0} /> 1`] = `
<body>
  <div>
    <h1
      class="_heading_080c38 _display-0_080c38 _dark_080c38 _large_080c38"
    >
      Example
    </h1>
  </div>
</body>
`;

exports[`<Heading /> > defaults to the correct HTML element > renders the correct element for <Heading variant={heading-1} /> 1`] = `
<body>
  <div>
    <h1
      class="_heading_080c38 _heading-1_080c38 _dark_080c38 _large_080c38"
    >
      Example
    </h1>
  </div>
</body>
`;

exports[`<Heading /> > defaults to the correct HTML element > renders the correct element for <Heading variant={heading-2} /> 1`] = `
<body>
  <div>
    <h2
      class="_heading_080c38 _heading-2_080c38 _dark_080c38 _large_080c38"
    >
      Example
    </h2>
  </div>
</body>
`;

exports[`<Heading /> > defaults to the correct HTML element > renders the correct element for <Heading variant={heading-3} /> 1`] = `
<body>
  <div>
    <h3
      class="_heading_080c38 _heading-3_080c38 _dark_080c38 _small_080c38"
    >
      Example
    </h3>
  </div>
</body>
`;

exports[`<Heading /> > defaults to the correct HTML element > renders the correct element for <Heading variant={heading-4} /> 1`] = `
<body>
  <div>
    <h4
      class="_heading_080c38 _heading-4_080c38 _dark_080c38 _small_080c38"
    >
      Example
    </h4>
  </div>
</body>
`;

exports[`<Heading /> > defaults to the correct HTML element > renders the correct element for <Heading variant={heading-5} /> 1`] = `
<body>
  <div>
    <h5
      class="_heading_080c38 _heading-5_080c38 _dark_080c38 _small_080c38"
    >
      Example
    </h5>
  </div>
</body>
`;

exports[`<Heading /> > defaults to the correct HTML element > renders the correct element for <Heading variant={heading-6} /> 1`] = `
<body>
  <div>
    <h6
      class="_heading_080c38 _heading-6_080c38 _dark_080c38 _small_080c38"
    >
      Example
    </h6>
  </div>
</body>
`;
